src/tour/LabeledExpr.g4
grammar LabeledExpr; // rename to distinguish from Expr.g4
//  要使用visitor的话(EvalVisitor)，编译g4文件的时候，要添加-visitor选项
//  antlr4  -no-listener  -visitor  LabeledExpr.g4
prog:   stat+ ;

stat:   expr NEWLINE                # printExpr
    |   ID '=' expr NEWLINE         # assign
    |   NEWLINE                     # blank
    ;

expr:   expr op=('*'|'/') expr      # MulDiv
    |   expr op=('+'|'-') expr      # AddSub
    |   INT                         # int
    |   ID                          # id
    |   '(' expr ')'                # parens
    ;

//  为运算符号定义名字，以此，在java的visitor代码中可以使用这些名字
MUL :   '*' ; // assigns token name to '*' used above in grammar
DIV :   '/' ;
ADD :   '+' ;
SUB :   '-' ;
ID  :   [a-zA-Z]+ ;      // match identifiers
INT :   [0-9]+ ;         // match integers
NEWLINE:'\r'? '\n' ;     // return newlines to parser (is end-statement signal)
WS  :   [ \t]+ -> skip ; // toss out whitespace
